# dia01

./: CHANGELOG.md  README.md  Setup.hs  dia01.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/1c126ac4/: cabal_macros.h
.stack-work/ghci/62e29221/: cabal_macros.h
.stack-work/ghci/8dcea88b/: cabal_macros.h
.stack-work/ghci/a1085d14/: cabal_macros.h
.stack-work/ghci/d778b6ab/: cabal_macros.h
.stack-work/ghci/d9d915bd/: cabal_macros.h
.stack-work/ghci/e057e8bf/: cabal_macros.h
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Combate.hs  CombateGPT.hs  CombateKanva.hs  CombatePlayHub.hs  Historia.hs  Lib.hs  Loja.hs  Main.hs  MundoCidadela.hs  SistemaGold.hs
src/Historia/: Fase1.hs  Fase2.hs  Fase3.hs  Final.hs  Prologo.hs
src/Models/: Caramelo.hs  Conquista.hs  Inimigo.hs  Item.hs  Kanva.hs  Local.hs  Player.hs  Pocao.hs
src/Util/: CombateFuncoes.hs  ControleSalvamento.hs  Lib.hs
src/pacote/: Cachorros Caramelos.txt  CarameloShadow.txt  Conquista.txt  ConversaGPT.txt  Heroi.txt  Itens.txt  ItensIniciais.txt  Kanva.txt  Loja.txt  LojaInicial.txt  PlayHub.txt  Pocao.txt  PocaoInicial.txt  PocaoMonster.txt  Pocoes.txt  PoçãoFinal.txt  ia2.txt
